--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 0 30px;
+    text-align: center;
+    margin: 0 30px 30px 30px;
 }
 
 h1, p{
@@ -96,6 +97,7 @@ form{
     flex-direction: column;
     align-items: flex-start;
     padding: 40px;
+    margin: 0 30px 30px 0;
     overflow-y: auto;
 }
 
@@ -175,5 +177,14 @@ button:hover{
     box-shadow: inset 3px 6px 12px rgba(0,0,0,0.2);
 }
 
+@media(max-width:1000px){
+    .wrapper{
+        flex-direction: column;
+    }
+
+    form{
+        height: 400px;
+    }
+}
 
 
