--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 .bg-img{
@@ -21,6 +20,7 @@ body{
     background: url('https://images.unsplash.com/photo-1589585374338-20ef873a738a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nzl8fGNvbXB1dGVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1080&q=60');
     background-repeat: no-repeat;
     background-size: cover;
+    object-fit: cover;
     height: 2000px;
     width: 100%;
 }
@@ -34,11 +34,12 @@ body{
 }
 
 .wrapper{
+    width: 100%;
     position: absolute;
     font-family: inherit;
     color: #f3f3f3;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
     top: 40px;
     left: 0;
@@ -50,7 +51,7 @@ body{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0 30px 30px 30px;
+    margin: 0 20px 20px;
 }
 
 h1, p{
@@ -66,19 +67,19 @@ p{
     font-size: 18px;
 }
 
-#survey-form::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 10px;
     background-color: #f5f5f5;
 }
 
-#survey-form::-webkit-scrollbar{
+body::-webkit-scrollbar{
     width: 12px;
     background-color: #f5f5f5;
 }
 
-#survey-form::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb{
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -87,8 +88,7 @@ p{
 
 
 form{
-    width: 720px;
-    height: 580px;
+    width: 80%;
     background-color: rgba(255, 255, 255, 0.2);
     box-shadow: 2px 14px 20px rgba(0,0,0,0.6);
     backdrop-filter: blur(20px);
@@ -96,9 +96,7 @@ form{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 40px;
-    margin: 0 30px 30px 0;
-    overflow-y: auto;
+    padding: 15px;
 }
 
 form .group{
@@ -108,6 +106,9 @@ form .group{
     font-size: 16px;
     margin: 0 0 20px;
     padding: 4px;
+}
+.group{
+    width: 100%;
 }
 
 .group label{
@@ -123,18 +124,23 @@ button,
 select{
     font-family: inherit;
     font-size: 16px;
-    width: 632px;
+    width: 100%;
     height: 38px;
     padding: 6px 12px;
     border-radius: 5px;
     border: none;
 }
 
+textarea{
+    height: 120px;
+}
+
 .group input[type=text]:focus,
 .group input[type=email]:focus,
 .group input[type=number]:focus,
 textarea:focus,
-button:focus{
+button:focus,
+select:focus{
     outline: none;
 }
 
@@ -146,7 +152,6 @@ input[type=checkbox]{
     margin-bottom: 10px;
 }
 
-
 .group span{
     display: flex;
     justify-content: start;
@@ -156,12 +161,6 @@ input[type=checkbox]{
 
 .group select option:first-child{
     color: grey;
-}
-
-
-textarea{
-    height: 120px;
-    width: 632px;
 }
 
 button{
@@ -177,30 +176,17 @@ button:hover{
     box-shadow: inset 3px 6px 12px rgba(0,0,0,0.2);
 }
 
-@media(max-width:1000px){
+@media only screen and (min-width: 1000px)
+{
     .wrapper{
-        flex-direction: column;
+        flex-direction: row;
+        align-items: initial;
     }
 
     form{
-        height: 400px;
+        margin-right: 30px;
     }
 }
 
-@media(max-width: 650px){
-    form
-    {
-        width: 400px
-    }
-
-    .group input[type=text],
-.group input[type=email],
-.group input[type=number],
-textarea,
-button,
-select{
-    width: 280px;
-}
-}
 
 
